# ChangeLog for dev-ruby/rspec
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.29 2008/10/04 17:35:22 maekke Exp $

  04 Oct 2008; Markus Meier <maekke@gentoo.org> rspec-1.1.4.ebuild:
  x86 stable, bug #239505

  04 Oct 2008; Brent Baude <ranger@gentoo.org> rspec-1.1.4.ebuild:
  stable ppc, bug 239505

  04 Oct 2008; Hans de Graaff <graaff@gentoo.org> rspec-1.1.4.ebuild:
  Mark stable for amd64

*rspec-1.1.8 (04 Oct 2008)

  04 Oct 2008; Hans de Graaff <graaff@gentoo.org> -rspec-1.1.5.ebuild,
  -rspec-1.1.7.ebuild, +rspec-1.1.8.ebuild:
  Version bump with fixes for the bugs in 1.1.7 that I reported upstream.
  Removing two previous versions since both have problems.

*rspec-1.1.7 (03 Oct 2008)

  03 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.7.ebuild:
  Version bump with minor bugfixes

  29 Sep 2008; Hans de Graaff <graaff@gentoo.org> rspec-1.1.5.ebuild:
  RSpec now depends on hoe

*rspec-1.1.5 (29 Sep 2008)

  29 Sep 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.5.ebuild:
  Version bump

*rspec-1.1.4 (27 May 2008)

  27 May 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.4.ebuild:
  Version bump: maintenance release with many bug fixes

  12 Apr 2008; Dawid Węgliński <cla@gentoo.org> rspec-1.1.3.ebuild:
  Stable on x86 (bug #217389)

  12 Apr 2008; nixnut <nixnut@gentoo.org> rspec-1.1.3.ebuild:
  Stable on ppc wrt bug 217389

  12 Apr 2008; Hans de Graaff <graaff@gentoo.org> rspec-1.1.3.ebuild:
  Mark stable on amd64, bug #217389

  21 Mar 2008; Hans de Graaff <graaff@gentoo.org> -rspec-1.0.5.ebuild,
  -rspec-1.1.0.ebuild, -rspec-1.1.1.ebuild, -rspec-1.1.2.ebuild:
  Remove old versions that will not become stable

*rspec-1.1.3 (01 Feb 2008)

  01 Feb 2008; Joshua Nichols <nichoj@gentoo.org> +rspec-1.1.3.ebuild:
  Version bump.

*rspec-1.1.2 (22 Jan 2008)

  22 Jan 2008; Richard Brown <rbrown@gentoo.org> +rspec-1.1.2.ebuild:
  Version bump.
