@@ -1,6 +1,13 @@
 # ChangeLog for dev-ruby/rspec
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.29 2008/10/04 17:35:22 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/rspec/ChangeLog,v 1.30 2008/10/21 05:46:35 graaff Exp $
+
+*rspec-1.1.9 (21 Oct 2008)
+
+  21 Oct 2008; Hans de Graaff <graaff@gentoo.org> +rspec-1.1.9.ebuild:
+  Version bump. Deprecated functionality has been removed and a number of bugs
+  have been fixed. Drop hoe dependency since it is only needed for development
+  of rspec itself and rubygems can now express this.
 
   04 Oct 2008; Markus Meier <maekke@gentoo.org> rspec-1.1.4.ebuild:
   x86 stable, bug #239505
